# voice-of-customer-analytics

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.offline.yaml  config.yaml
data/: README.md
data/sample/: gold.csv  gold_stub.csv  sample.csv
docs/: SPEC.md
prompts/: system.txt  v1.txt  v2.txt  v3.txt
scripts/: fetch_model.py  make_gold_stub.py  make_sample.py
src/voc/: __init__.py  config.py  embed.py  ingest.py  llm_extract.py  pipeline.py  predict.py  report.py  schema.py  stats.py  themes.py
tests/: test_config.py  test_embed.py  test_ingest.py  test_llm_extract.py  test_predict.py  test_report.py  test_stats.py  test_themes.py
