[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voc-intelligence-pipeline"
version = "0.1.0"
description = "Voice-of-Customer intelligence pipeline: unstructured customer text -> quantified, statistically-defensible insights."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dustin" }]

# Pinned for reproducibility. Heavy ML/LLM deps are pulled by `make setup`
# at their respective milestones; M0 only needs the core + dev tooling.
dependencies = [
    # --- core data ---
    "pandas==2.2.3",
    "numpy==1.26.4",
    "pyarrow==16.1.0",
    "pyyaml==6.0.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "tqdm==4.66.5",
    # --- NLP / embeddings (M2, M3) ---
    "sentence-transformers==3.0.1",
    "bertopic==0.16.3",
    "umap-learn==0.5.6",
    "hdbscan==0.8.38.post2",
    "chromadb==0.5.5",
    # --- LLM (M4) ---
    "anthropic==0.39.0",
    # --- ML (M5) ---
    "scikit-learn==1.5.2",
    "lightgbm==4.5.0",
    # --- stats (M6) ---
    "scipy==1.13.1",
    "statsmodels==0.14.2",
    # --- viz / report (M7) ---
    "matplotlib==3.9.2",
    "plotly==5.24.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "ruff==0.6.9",
]
shap = ["shap==0.46.0"]

[project.scripts]
voc = "voc.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Sensible defaults: pyflakes, pycodestyle, isort, bugbear, pyupgrade, docstrings (selected).
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Third-party (matplotlib/pyparsing) deprecations — not from our code.
    "ignore::DeprecationWarning",
]
