[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voc-intelligence-pipeline"
version = "0.1.0"
description = "Voice-of-Customer intelligence pipeline: unstructured customer text -> quantified, statistically-defensible insights."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dustin" }]

# The CORE dependencies are pure/manylinux wheels with no system libraries and
# no network at run time — they install reproducibly on any platform and are all
# the *offline* backends (hashing embedder, KMeans themes, sklearn gradient
# boosting, mock LLM) need. The heavy / platform-fragile / network-dependent
# pieces are opt-in extras: `ml` (real embeddings + topic models + boosters) and
# `llm` (Anthropic API). Install what you need:
#   pip install -e ".[dev]"            # light, offline-capable, reproducible
#   pip install -e ".[dev,ml,llm]"     # full real backends (heavy)
dependencies = [
    "pandas==2.2.3",
    "numpy==1.26.4",
    "pyarrow==16.1.0",
    "pyyaml==6.0.3",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "scipy==1.13.1",
    "scikit-learn==1.5.2",
    "chromadb==0.5.5",
    "matplotlib==3.9.2",
]

[project.optional-dependencies]
# Real NLP backends (M2 embeddings, M3 BERTopic) + gradient boosters (M5).
# Heavy and partly compiled (torch, numba/llvmlite, OpenMP); see README for
# system prerequisites (e.g. libomp on macOS for LightGBM).
ml = [
    "sentence-transformers==3.0.1",
    "bertopic==0.16.3",
    "umap-learn==0.5.6",
    "hdbscan==0.8.38.post2",
    "lightgbm==4.5.0",
]
# Real LLM extraction (M4); reads the API key from an env var at run time.
# httpx is pinned <0.28: anthropic 0.39.0 passes a `proxies` arg that httpx
# removed in 0.28, which otherwise breaks client construction.
llm = ["anthropic==0.39.0", "httpx<0.28"]
dev = [
    "pytest==8.3.3",
    "ruff==0.6.9",
]
shap = ["shap==0.46.0"]
# Convenience: everything.
all = [
    "voc-intelligence-pipeline[ml,llm,dev]",
]

[project.scripts]
voc = "voc.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Sensible defaults: pyflakes, pycodestyle, isort, bugbear, pyupgrade, docstrings (selected).
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # Third-party (matplotlib/pyparsing) deprecations — not from our code.
    "ignore::DeprecationWarning",
]
